--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,13 @@
 /* css styles */
+/* Header Background */
+/* .navbar {
+    background-color: #ffffff; 
+} */
+
+/*.navbar .navbar-nav .nav-link {
+    color: #ffffff;
+} */
+
 .pub-container {
     max-width: 1200px;
     margin: 20px auto;
